@@ -10,6 +10,7 @@ maps can be easily accessed in game with the filter "Community Maps".
 
 | Map Name | Author | Link | Publication Date |
 |----------|--------|------|------------------|
+| Yekaterinaville | [andy5995](https://wildfiregames.com/forum/profile/21632-andy5995/) | [Forum](https://wildfiregames.com/forum/topic/60909-mainland-rectangled/?do=findComment&comment=461162) | 23-10-2021 |
 | Mainland Rectangled | [andy5995](https://wildfiregames.com/forum/profile/21632-andy5995/) | [Forum](https://wildfiregames.com/forum/topic/60909-mainland-rectangled/) | 22-10-2021 |
 | Mainland TG | [Jammyjamjamman](https://wildfiregames.com/forum/profile/33845-jammyjamjamman/) | [Forum](https://wildfiregames.com/forum/topic/28758-mainland-with-teammates-placed-closely-together/) | 06-09-2020 |
 | African Plains TG | [Jammyjamjamman](https://wildfiregames.com/forum/profile/33845-jammyjamjamman/) | - | - |
