@@ -1,3 +1,7 @@
+2021-10-23
+
+  * Yekaterinaville added (random map)
+
 2021-10-22
 
   * Mainland Rectangled added (random map)
